Доделал наконец-то сборку проекта в .exe файл. Урааааа. Ну а также сделал более или менее готовую программу к выпуску